[metadata]
name = ngsimple
version = 0.1.0
author = Tom Gustafsson
description = The easiest way to call Netgen from Python
url = https://github.com/kinnala/ngsimple
project_urls =
    Code=https://github.com/kinnala/ngsimple
    Issues=https://github.com/kinnala/ngsimple/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_file = LICENSE
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    docker
    meshio>=4.0.4
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel